--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Email
                 </a>
-                <a href="images/Example Resume.pdf" class="
+                <a href="" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Resume
