--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </h1>
 
                     <p class="about-me__info--para">
-                        I'm a <span class="text--purple">Frontend Developer</span> that makes responsive and flexible
+                        I'm a <span class="text--purple">Frontend Developer</span> who makes responsive and flexible
                         web pages which allows the user a much easier and enjoyable experience.
                     </p>
 
