--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mohammad Al Siblini</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js"></script>
-    <link rel="icon" type="image/png" href="images/Logo.png">
+    <link rel="icon" type="image/png" href="images/Logo2.png">
 </head>
 
 <body>
