--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li class="nav__link">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=mohammadsiblini246@gmail.com" target="_blank" class="
+                    <a href="mailto:mohammadsiblini246@gmail.com" target="_blank" class="
                     nav__link--anchor
                     nav__link--achor-primary
                     ">Contact </a>
@@ -67,7 +67,7 @@
                             <!--<i class="fab fa-github"></i>-->
                             <img src="images/github.svg" alt="github">
                         </a>
-                        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=mohammadsiblini246@gmail.com"
+                        <a href="mailto:mohammadsiblini246@gmail.com"
                             target="_blank" title="Gmail" class="about-me_link opacity">
                             <!--<i class="far fa-envelope"></i>-->
                             <img src="images/mail.svg" alt="gmail">
@@ -183,7 +183,7 @@
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Linkedin
                 </a>
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=mohammadsiblini246@gmail.com" class="
+                <a href="mailto:mohammadsiblini246@gmail.com" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Email
