--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="loader">
         <div class="container__preloader">
-            <img src="images/Preloader.gif" alt="">
+            <img src="images/Preloader.gif" class="Load" alt="">
             <h1>Loading...</h1>
         </div>
     </div>
@@ -70,8 +70,8 @@
                     </h1>
 
                     <p class="about-me__info--para">
-                        I'm a <span class="text--purple">Frontend Developer</span> who makes responsive and flexible
-                        web pages which allows the user a much easier and enjoyable experience.
+                        I'm a <span class="text--purple">Frontend Developer</span> who creates user-friendly and responsive web pages. 
+                        I am very passionate about my skills and love to always keep on learning.
                     </p>
 
                     <div class="about-me_links">
