--- a/index.html
+++ b/index.html
@@ -144,14 +144,38 @@
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
+                            <img src="images/Library Project.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Library Ecommerce Website</h3>
+                                <h4 class="project__description--sub-title">
+                                    <span class="text--orange">HTML, CSS, Javascript</span>
+                                </h4>
+                                <p class="project__description--para">
+                                    An ecommerce website that implements animations, mobile responsiveness, and overall ease of use along with many other features
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://mhmdlsiblini.github.io/Library-Project-v1/" target="_blank" title="Link to Website" class="project__description--link opacity">
+                                        <img src="images/link-white.svg" alt="">
+                                    </a>
+
+                                    <a href="https://github.com/MhmdLSiblini/Library-Project-v1" target="_blank" title="Github Code" class="project__description--link opacity">
+                                        <img src="images/github-white.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="project">
+                        <div class="project__wrapper">
                             <img src="images/University Site.png" class="project__img" alt="">
                             <div class="project__description">
                                 <h3 class="project__description--title">University Website</h3>
                                 <h4 class="project__description--sub-title">
-                                    <span class="text--orange">HTML, CSS, Minor Javascript</span>
+                                    <span class="text--orange">HTML, CSS, Javascript</span>
                                 </h4>
                                 <p class="project__description--para">
-                                    A university website that implements animations, multiple pages, mobile responsiveness, and overall ease of use - 
+                                    A university website that implements animations, multiple pages, mobile responsiveness, and overall ease of use along with many other features - 
                                     <span class="text--red">!WORK IN PROGRESS!</span>
                                 </p>
                                 <div class="project__description--links">
