--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                     <span class="text--orange">HTML, CSS, Javascript</span>
                                 </h4>
                                 <p class="project__description--para">
-                                    An ecommerce website that implements animations, mobile responsiveness, and overall ease of use along with many other features
+                                    An ecommerce website that implements animations, flexbox, mobile responsiveness, and overall ease of use along with many other features
                                 </p>
                                 <div class="project__description--links">
                                     <a href="https://mhmdlsiblini.github.io/Library-Project-v1/" target="_blank" title="Link to Website" class="project__description--link opacity">
@@ -175,7 +175,7 @@
                                     <span class="text--orange">HTML, CSS, Javascript</span>
                                 </h4>
                                 <p class="project__description--para">
-                                    A university website that implements animations, multiple pages, mobile responsiveness, and overall ease of use along with many other features - 
+                                    A university website that implements animations, flexbox, multiple pages, mobile responsiveness, and overall ease of use along with many other features - 
                                     <span class="text--red">!WORK IN PROGRESS!</span>
                                 </p>
                                 <div class="project__description--links">
