--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <a href="https://github.com/MhmdLSiblini" target="_blank" title="Github" class="about-me_link opacity">
                             <img src="images/github.svg" alt="github">
                         </a>
-                        <a href="mailto:mohammadsiblini246@gmail.com"
+                        <a href="mailto:mohammadalsiblini@gmail.com"
                             target="_blank" title="Gmail" class="about-me_link opacity">
                             <img src="images/mail.svg" alt="gmail">
                         </a>
@@ -168,6 +168,31 @@
 
                     <li class="project">
                         <div class="project__wrapper">
+                            <img src="images/T react.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">T-React Project</h3>
+                                <h4 class="project__description--sub-title">
+                                    <span class="text--orange">HTML, CSS</span>
+                                </h4>
+                                <p class="project__description--para">
+                                    Studying a website and trying to copy its elements with my own code <br>
+                                    <span class="text--red">!WORK IN PROGRESS!</span> - needs mobile responsiveness
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://mhmdlsiblini.github.io/Treact-Project/" target="_blank" title="Link to Website" class="project__description--link opacity">
+                                        <img src="images/link-white.svg" alt="">
+                                    </a>
+
+                                    <a href="https://github.com/MhmdLSiblini/Treact-Project" target="_blank" title="Github Code" class="project__description--link opacity">
+                                        <img src="images/github-white.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <!-- <li class="project">
+                        <div class="project__wrapper">
                             <img src="images/University Site.png" class="project__img" alt="">
                             <div class="project__description">
                                 <h3 class="project__description--title">University Website</h3>
@@ -189,7 +214,7 @@
                                 </div>
                             </div>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -226,7 +251,7 @@
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Linkedin
                 </a>
-                <a href="mailto:mohammadsiblini246@gmail.com" class="
+                <a href="mailto:mohammadalsiblini@gmail.com" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white" target="_blank">Email
@@ -237,7 +262,7 @@
                 link__hover-effect--white" target="_blank">Resume
                 </a>
             </div>
-            <div class="footer__copyright">Copyright &copy; 2022 Mohammad Al Siblini</div>
+            <div class="footer__copyright">Copyright &copy; 2023 Mohammad Al Siblini</div>
         </div>
     </footer>
 </body>
