--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohammad Al Siblini</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="images/Logo2.png">
+    <link rel="icon" type="image/png" href="images/Logo4.png">
 </head>
 
 <body class="loading" id="remove">
@@ -50,7 +50,7 @@
                 </li>
 
                 <li class="nav__link">
-                    <a href="mailto:mohammadsiblini246@gmail.com" target="_blank" class="
+                    <a href="mailto:mohammadalsiblini@gmail.com" target="_blank" class="
                     nav__link--anchor
                     nav__link--achor-primary
                     ">Contact </a>
@@ -66,12 +66,13 @@
                     </figure>
 
                     <h1 class="about-me__info-title">
-                        Welcome! I'm <span class="text--purple">Mohammad</span> <span class="wave">👋</span>
+                         Yo! The Name's <span class="text--purple">Mohammad </span><span class="wave">👋</span>
                     </h1>
 
                     <p class="about-me__info--para">
-                        I'm a <span class="text--purple">Frontend Developer</span> who creates user-friendly and responsive web pages. 
-                        I am very passionate about my skills and love to always keep on learning.
+                        I'm a <span class="text--purple">Frontend Developer</span>.
+                        I consider myself a sculptor of web pages, carefully crafting user-friendly and responsive designs. 
+                        I take great pride in my skills and am always eager to learn and improve.
                     </p>
 
                     <div class="about-me_links">
@@ -92,7 +93,7 @@
                     </div>
                 </div>
                 <figure class="about-me__img--container">
-                    <img src="images/undraw_web_developer_re_h7ie.svg" class="about-me__img" alt="">
+                    <img src="images/sculptor.svg" class="about-me__img" alt="">
                 </figure>
             </div>
         </div>
@@ -103,7 +104,7 @@
     <section id="languages">
         <div class="container">
             <div class="row">
-                <h1 class="section__title">This is my <span class="text--purple"> Technology Stack</span></h1>
+                <h1 class="section__title">Behold, My <span class="text--purple"> Tech Arsenal</span>!</h1>
                 <div class="language__list">
                     <div class="language">
                         <figure class="language__img--wrapper">
@@ -140,7 +141,7 @@
     <section id="projects">
         <div class="container">
             <div class="row">
-                <h1 class="section__title">Some of my <span class="text--purple"> Projects </span></h1>
+                <h1 class="section__title">Check out my <span class="text--purple">Creations</span></h1>
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
@@ -176,7 +177,7 @@
                                 </h4>
                                 <p class="project__description--para">
                                     Studying a website and trying to copy its elements with my own code <br>
-                                    <span class="text--red">!WORK IN PROGRESS!</span> - needs mobile responsiveness
+                                    <span class="text--red">!WORK IN PROGRESS!</span> - Needs Mobile Responsiveness and Animations
                                 </p>
                                 <div class="project__description--links">
                                     <a href="https://mhmdlsiblini.github.io/Treact-Project/" target="_blank" title="Link to Website" class="project__description--link opacity">
@@ -226,7 +227,7 @@
         <div class="row footer__row">
             <a href="#" class="footer__anchor">
                 <figure class="footer__logo">
-                    <img src="images/Logo.png" class="footer__logo--img" alt="">
+                    <img src="images/Logo3.png" class="footer__logo--img" alt="">
                 </figure>
                 <span class="footer__logo--popper">
                     <div class="container--top">
